# robot_learning

./: LICENSE  pyproject.toml  readme.md  requirements.txt  setup.py
robot_learning/src/assets/biped/: config.py
robot_learning/src/jax/: deepmimic_env.py  imitation_rewards.py  randomize.py  reference_motions.py  train.py  train_deepmimic.py  utils.py  wrapper.py
robot_learning/src/jax/animation_reference/: render_humanoid_animation.py  visualize_biped.py  visualize_motion.py  visualize_motion_proto.ipynb
robot_learning/src/jax/envs/: biped.py  biped_test.py
robot_learning/src/jax/results/20250628-222830/000201850880/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt  ppo_network_config.json
robot_learning/src/jax/results/20250628-222830/000201850880/ocdbt.process_0/: manifest.ocdbt
robot_learning/src/pytorch/agents/: ppo.py
