[project]
name = "robot-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brax>=0.13.0",
    "gymnasium>=1.2.1",
    "imageio>=2.37.0",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "mediapy>=1.2.4",
    "mujoco>=3.3.6",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
